Asset Browser editor continually redraws when the catalog tree is visible #91940

Closed
opened 2021-10-04 10:38:14 +02:00 by Jesse Yurkovich · 7 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1070 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-04 19:18, hash: c9af025936
Worked: (newest version of Blender that worked as expected)

Short description of error
If the catalog tree is visible (t-panel) then blender will continually redraw the asset browser space. This is noticeable on both CPU and GPU monitoring graphs if you have those present as well as blender's debug drawing mode (immediately noticed because laptop fans).

Sequence of events noted below.

Exact steps for others to reproduce the error

  • Open default scene and pull up the Timeline editor a bit to make room
  • Change the Timeline to the Asset Browser
  • F3 search for the "Debug menu" operator and enter code "888"
  • Observe constant redraws in the Asset browser
  • Hide the catalog tree by pressing T in the asset browser
  • Redraws stop

This is caused by the following code path. The notification triggers a never ending loop of the following:
file_create_asset_catalog_tree_view_in_layout --> AssetCatalogTreeView::build_tree --> AssetCatalogTreeView::add_all_item -->WM_main_add_notifier(NC_SPACE | ND_SPACE_ASSET_PARAMS, nullptr) [Repeat]

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1070 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-04 19:18, hash: `c9af025936` Worked: (newest version of Blender that worked as expected) **Short description of error** If the catalog tree is visible (t-panel) then blender will continually redraw the asset browser space. This is noticeable on both CPU and GPU monitoring graphs if you have those present as well as blender's debug drawing mode (immediately noticed because laptop fans). Sequence of events noted below. **Exact steps for others to reproduce the error** - Open default scene and pull up the Timeline editor a bit to make room - Change the Timeline to the Asset Browser - F3 search for the "Debug menu" operator and enter code "888" - Observe constant redraws in the Asset browser - Hide the catalog tree by pressing T in the asset browser - Redraws stop This is caused by the following code path. The notification triggers a never ending loop of the following: `file_create_asset_catalog_tree_view_in_layout` --> `AssetCatalogTreeView::build_tree` --> `AssetCatalogTreeView::add_all_item` -->`WM_main_add_notifier(NC_SPACE | ND_SPACE_ASSET_PARAMS, nullptr)` [Repeat]
Author
Member

Added subscriber: @deadpin

Added subscriber: @deadpin
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

First bad commit I got from bisecting: 9d9f205dc4

cc @JulianEisel

First bad commit I got from bisecting: 9d9f205dc4 cc @JulianEisel

This issue was referenced by 758f3f7456

This issue was referenced by 758f3f7456ac1e31f411c4ac1b19760ad6e5539c
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Julian Eisel self-assigned this 2021-10-05 16:11:26 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91940
No description provided.